--- a/muistilista/app/views/base.html
+++ b/muistilista/app/views/base.html
@@ -33,18 +33,20 @@
                         <span class="icon-bar"></span>
                     </button>
                     <!-- Sovelluksen nimi -->
-                    <a class="navbar-brand" href="#">Checklist service</a>
+                    <a class="navbar-brand" href="{{base_path}}/chore">Checklist service</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="navigation">
                     <ul class="nav navbar-nav">
                         <!-- Navigaation linkit -->
-                        <li><a href="#">Chores</a></li>
+                        
+                        <li><a href="{{base_path}}/chore">Chores</a></li>
                         <li><a href="#">Classes</a></li>
+                        
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Log in</a></li>
+                        <li><a href="{{base_path}}/login">Log in</a></li>
                     </ul>
                 </div>
 
