--- a/muistilista/app/views/chore/index.html
+++ b/muistilista/app/views/chore/index.html
@@ -41,8 +41,9 @@
             </td>
             {% else %}
             <td>
-
-                {{forms.finish_button()}}
+                <form method ="post" action="{{base_path}}/chore/{{chore.id}}/finish">
+                    <button type="submit" class="btn btn-success">Finish!</button>
+                </form>
             </td>
             {% endif %}
         </tr>
