--- a/muistilista/app/views/base.html
+++ b/muistilista/app/views/base.html
@@ -33,21 +33,28 @@
                         <span class="icon-bar"></span>
                     </button>
                     <!-- Sovelluksen nimi -->
+                    
                     <a class="navbar-brand" href="{{base_path}}/chore">Checklist service</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="navigation">
                     <ul class="nav navbar-nav">
                         <!-- Navigaation linkit -->
-                        
+
                         <li><a href="{{base_path}}/chore">Chores</a></li>
-                        <li><a href="#">Classes</a></li>
-                        
+                        <li><a href="{{base_path}}/category">Categories</a></li>
+
                     </ul>
 
+                    {% if user_logged_in %}
+                    <form class="navbar-form navbar-right" method="post" action="{{base_path}}/logout">
+                        <button type="submit" class="btn btn-default">Log out</button>
+                    </form>
+                    {% else %}
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="{{base_path}}/login">Log in</a></li>
                     </ul>
+                    {% endif %}
                 </div>
 
             </div>
