--- a/muistilista/app/views/chore/index.html
+++ b/muistilista/app/views/chore/index.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
 
+<!-- Käyttäjän askareiden listaus -->
 {% import "macros/forms.html" as forms %}
-<h1>Chores</h1>
+<h1>
+    {{ user_name }}'s Chores
+</h1>
 
+<!-- Virheiden ja viestien listaus -->
 {% if message %}
 <div class="alert alert-success">
     {{message}}
@@ -16,6 +20,7 @@
 </div>
 {% endif %}
 
+<!-- Askareiden ja niiden attribuuttien tulostaminen -->
 <table class="table table-bordered table-striped">
     <tr>
         <th>Chore</th>
@@ -27,19 +32,26 @@
         {% for chore in chores %}
         <tr>
             <td><a href="{{base_path}}/chore/{{chore.id}}">{{chore.name}}</td>
-            {% if chore.class %}
-            <td>{{chore.class}}</td>
-            {% else %}
-            <td></td>
+            
+            <!-- Etsii käyttäjän kategorioista oikean kategorian nimen sen id:n perusteella -->
+            {% if chore.category_id %}
+                {% for cat in categories %}
+                    {% if cat.id == chore.category_id %}
+                    <td><a href="{{base_path}}/chore/{{cat.id}}">{{cat.name}}</td>
+                    {% endif %}
+                {% endfor %}            
             {% endif %}
             <td>{{chore.priority}}</td>
+            <!-- Onko askare tehty vai ei. -->
             {% if chore.status %}
             <td>
+                <!-- Nappi jolla merkitään että askare on tehty. -->
                 <label class="label label-success">Finished</label>
 
                 {{forms.delete_button("#{base_path}/chore/#{chore.id}/delete", "Delete Chore")}}
             </td>
             {% else %}
+            <!-- Askare on tehty, ja annetaan mahdollisuus poistaa askare -->
             <td>
                 <form method ="post" action="{{base_path}}/chore/{{chore.id}}/finish">
                     <button type="submit" class="btn btn-success">Finish!</button>
@@ -54,6 +66,7 @@
 
 </table>
 
+<!-- Linkki uuden askareen luomiseen -->
 <p>
     <a href="{{base_path}}/chore/new" class="btn btn-primary">New Chore</a>
 </p>
