--- a/muistilista/app/views/category/index.html
+++ b/muistilista/app/views/category/index.html
@@ -32,6 +32,8 @@
 </table>
 
 <!-- Tuleva ominaisuus: uuden kategorian luomisen linkki -->
-<button class="btn btn-primary">New Category</button>
+<p>
+    <a href="{{base_path}}/category/new" class="btn btn-primary">New Category</a>
+</p>
 
 {% endblock %}
