--- a/muistilista/app/views/chore/index.html
+++ b/muistilista/app/views/chore/index.html
@@ -37,7 +37,7 @@
             {% if chore.category_id %}
                 {% for cat in categories %}
                     {% if cat.id == chore.category_id %}
-                    <td><a href="{{base_path}}/chore/{{cat.id}}">{{cat.name}}</td>
+                    <td><a href="{{base_path}}/category/{{cat.id}}">{{cat.name}}</td>
                     {% endif %}
                 {% endfor %}            
             {% endif %}
