--- a/muistilista/app/views/account/login.html
+++ b/muistilista/app/views/account/login.html
@@ -4,6 +4,11 @@
 <!-- Kirjautumisikkuna -->
 
 <!-- Mahdolliset viestit ja virheilmoitukset -->
+{% if message %}
+<div class="alert alert-success">
+    {{message}}
+</div>
+{% endif %}
 {% if error %}
 <div class="alert alert-danger">
     {{error}}
@@ -23,5 +28,11 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Log in</button>
+</form>
+
+<form method="get" action="{{base_path}}/register">
+    <div>
+        <button type="submit" class="btn btn-default">Register</button>
+    </div>
 </form>
 {% endblock %}
