--- a/muistilista/app/views/macros/forms.html
+++ b/muistilista/app/views/macros/forms.html
@@ -14,3 +14,21 @@
     <button type="submit" class="btn btn-success">Finish!</button>
 </form>
 {% endmacro %}
+
+{% macro messages() %}
+{% if message %}
+<div class="alert alert-success">
+    {{message}}
+</div>
+{% endif %}
+
+{% if errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+{% endmacro %}
